<resources>
    <string name="app_name">Story Catcher</string>
    <string name="image_logo">image logo</string>
    <string name="image_story_catcher">image story catcher</string>
    <string name="welcome_to">Welcome To</string>
    <string name="story_catcher">STORY CATCHER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="age">Age</string>
    <string name="kids_name">Kids Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user_id">User ID</string>
</resources>